Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5875

DLC: failed adding an existing network interface when there is traffic ongoing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.7.0
    • Lustre 2.7.0
    • None
    • 3
    • 16427

      1. setup the system and run sanity
      2. add an existing network interface on the client side, got error messages

      [root@onyx-28 ~]# lnetctl net show -v
      net:
          - nid: 0@lo
            status: up
            tunables:
                peer_timeout: 0
                peer_credits: 0
                peer_buffer_credits: 0
                credits: 0
                CPTs:  0
          - nid: 10.2.4.74@tcp
            status: up
            interfaces:
                0: eth0
            tunables:
                peer_timeout: 180
                peer_credits: 8
                peer_buffer_credits: 0
                credits: 256
                CPTs:  0
      
      [root@onyx-28 ~]# lnetctl net add --net tcp --if eth0
      add:
          - net:
                errno: -22
                descr: "cannot add network: Invalid argument"
      
      Lustre: DEBUG MARKER: == sanity test 24v: list directory with large files (handle hash collision, bug: 17560) == 12:10:03 (1415218203)
      LNetError: 31891:0:(api-ni.c:1488:lnet_startup_lndnis()) Net tcp is not unique
      LNetError: 31897:0:(api-ni.c:1488:lnet_startup_lndnis()) Net tcp is not unique
      LNetError: 31899:0:(api-ni.c:1488:lnet_startup_lndnis()) Net tcp is not unique
      
       - created 10000 (time 141521821Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      3.63 total 10.13 last 10.13)
       - created 20000 (time 1415218224.04 total 20.54 last 10.41)
      

            ashehata Amir Shehata (Inactive)
            sarah Sarah Liu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: