LU-5875 lnet: return -EEXIST if NI is not unique

Return -EEXIST and not -EINVAL when trying to add a
network interface which is not unique.

Some minor cleanup in api-ni.c

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Change-Id: Ic74a768c0e7688ba0e35740e2ca2ac9ae4f999ea