lnet/lnet/api-ni.c
@@ -1415,7 +1415,7 @@ static int
 lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 		   __s32 peer_cr, __s32 peer_buf_cr, __s32 credits)
 {
-	int			rc = 0;
+	int			rc = -EINVAL;
 	int			lnd_type;
 	lnd_t			*lnd;
 	struct lnet_tx_queue	*tq;
@@ -1433,19 +1433,21 @@ lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 
 	/* Make sure this new NI is unique. */
 	lnet_net_lock(LNET_LOCK_EX);
-	if (!lnet_net_unique(LNET_NIDNET(ni->ni_nid), &the_lnet.ln_nis)) {
+	rc = lnet_net_unique(LNET_NIDNET(ni->ni_nid), &the_lnet.ln_nis);
+	lnet_net_unlock(LNET_LOCK_EX);
+
+	if (!rc) {
 		if (lnd_type == LOLND) {
-			lnet_net_unlock(LNET_LOCK_EX);
 			lnet_ni_free(ni);
 			return 0;
 		}
-		lnet_net_unlock(LNET_LOCK_EX);
 
 		CERROR("Net %s is not unique\n",
 		       libcfs_net2str(LNET_NIDNET(ni->ni_nid)));
+
+		rc = -EEXIST;
 		goto failed0;
 	}
-	lnet_net_unlock(LNET_LOCK_EX);
 
 	LNET_MUTEX_LOCK(&the_lnet.ln_lnd_mutex);
 	lnd = lnet_find_lnd_by_type(lnd_type);
@@ -1453,8 +1455,7 @@ lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 #ifdef __KERNEL__
 	if (lnd == NULL) {
 		LNET_MUTEX_UNLOCK(&the_lnet.ln_lnd_mutex);
-		rc = request_module("%s",
-				    libcfs_lnd2modname(lnd_type));
+		rc = request_module("%s", libcfs_lnd2modname(lnd_type));
 		LNET_MUTEX_LOCK(&the_lnet.ln_lnd_mutex);
 
 		lnd = lnet_find_lnd_by_type(lnd_type);
@@ -1468,6 +1469,7 @@ lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 					   "compiled with kernel module "
 					   "loading support.");
 #endif
+			rc = -EINVAL;
 			goto failed0;
 		}
 	}
@@ -1558,7 +1560,7 @@ lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 	if (ni->ni_peertxcredits == 0 || ni->ni_maxtxcredits == 0) {
 		LCONSOLE_ERROR_MSG(0x107, "LNI %s has no %scredits\n",
 				   libcfs_lnd2str(lnd->lnd_type),
-				   ni->ni_peertxcredits == 0 ? 
+				   ni->ni_peertxcredits == 0 ?
 					"" : "per-peer ");
 		/* shutdown the NI since if we get here then it must've already
 		 * been started
@@ -1581,7 +1583,7 @@ lnet_startup_lndni(struct lnet_ni *ni, __s32 peer_timeout,
 	return 0;
 failed0:
 	lnet_ni_free(ni);
-	return -EINVAL;
+	return rc;
 }
 
 static int
@@ -1830,6 +1832,7 @@ LNetNIInit(lnet_pid_t requested_pid)
 failed4:
 	lnet_ping_md_unlink(pinfo, &md_handle);
 	lnet_ping_info_free(pinfo);
+	the_lnet.ln_ping_info = NULL;
 	rc2 = LNetEQFree(the_lnet.ln_ping_target_eq);
 	LASSERT(rc2 == 0);
 failed3:
